--- a/web13/WebContent/WEB-INF/web.xml
+++ b/web13/WebContent/WEB-INF/web.xml
@@ -23,4 +23,24 @@
   	<servlet-name>ex02</servlet-name>
   	<url-pattern>/ex02.html</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>ex03</servlet-name>
+  	<!-- <servlet-class>com.bit.controller.Step04</servlet-class> -->
+  	<servlet-class>com.bit.controller.Step05</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>ex03</servlet-name>
+  	<url-pattern>/ex03.html</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>ex07</servlet-name>
+  	<servlet-class>com.bit.controller.Step07</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>ex07</servlet-name>
+  	<url-pattern>/ex07.html</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
