220516 HttpServlet, 한글 처리
- HttpServlet의 doGet, doPost 상속 받아서 편하게 구현 가능
- 한글 처리 (코드 상에선 여기까지 완료)

+
doPost에서 한글 처리만 해주고, doGet을 호출하거나
doGet/doPost에서 한글 처리만 한 뒤 아예 다른 메서드 호출하는 방식으로 코드 정리 가능
(한글 처리 += 각자 처리해야 할 일들)

--- a/web13/WebContent/WEB-INF/web.xml
+++ b/web13/WebContent/WEB-INF/web.xml
@@ -43,4 +43,12 @@
   	<url-pattern>/ex07.html</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+  	<servlet-name>ex08</servlet-name>
+  	<servlet-class>com.bit.controller.Step08</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>ex08</servlet-name>
+  	<url-pattern>/ex08.html</url-pattern>
+  </servlet-mapping>
 </web-app>
