--- a/web13/WebContent/WEB-INF/web.xml
+++ b/web13/WebContent/WEB-INF/web.xml
@@ -51,4 +51,13 @@
   	<servlet-name>ex08</servlet-name>
   	<url-pattern>/ex08.html</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>ex11</servlet-name>
+  	<servlet-class>com.bit.controller.Ex11</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>ex11</servlet-name>
+  	<url-pattern>/ex11.html</url-pattern>
+  </servlet-mapping>
 </web-app>
