--- a/web14/src/main/webapp/WEB-INF/web.xml
+++ b/web14/src/main/webapp/WEB-INF/web.xml
@@ -5,4 +5,13 @@
   <welcome-file-list>
   	<welcome-file>index.html</welcome-file>
   </welcome-file-list>
+  
+  <servlet>
+	<servlet-name>EmpList</servlet-name>
+	<servlet-class>com.bit.controller.EmpListController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>EmpList</servlet-name>
+  	<url-pattern>/api/emps.json</url-pattern>
+  </servlet-mapping>
 </web-app>
