220517 create Insert Controller

--- a/web14/src/main/webapp/WEB-INF/web.xml
+++ b/web14/src/main/webapp/WEB-INF/web.xml
@@ -14,4 +14,13 @@
   	<servlet-name>EmpList</servlet-name>
   	<url-pattern>/api/emps.json</url-pattern>
   </servlet-mapping>
+
+  <servlet>
+	<servlet-name>EmpAdd</servlet-name>
+	<servlet-class>com.bit.controller.EmpInsertController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>EmpAdd</servlet-name>
+  	<url-pattern>/api/addemp.json</url-pattern>
+  </servlet-mapping>
 </web-app>
