--- a/web14/src/main/webapp/WEB-INF/web.xml
+++ b/web14/src/main/webapp/WEB-INF/web.xml
@@ -32,4 +32,23 @@
   	<servlet-name>EmpOne</servlet-name>
   	<url-pattern>/api/emp.json</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+	<servlet-name>EmpUpdate</servlet-name>
+	<servlet-class>com.bit.controller.EmpUpdateController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>EmpUpdate</servlet-name>
+  	<url-pattern>/api/empUpdate.json</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+	<servlet-name>EmpDelete</servlet-name>
+	<servlet-class>com.bit.controller.EmpDeleteController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>EmpDelete</servlet-name>
+  	<url-pattern>/api/empDel.json</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
