--- a/web15/src/main/webapp/WEB-INF/web.xml
+++ b/web15/src/main/webapp/WEB-INF/web.xml
@@ -32,4 +32,13 @@
   	<servlet-name>addEmp</servlet-name>
   	<url-pattern>/emp/add.html</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>oneEmp</servlet-name>
+  	<servlet-class>com.bit.controller.EmpOneController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>oneEmp</servlet-name>
+  	<url-pattern>/emp/detail.html</url-pattern>
+  </servlet-mapping>
 </web-app>
