--- a/web15/src/main/webapp/WEB-INF/web.xml
+++ b/web15/src/main/webapp/WEB-INF/web.xml
@@ -41,4 +41,13 @@
   	<servlet-name>oneEmp</servlet-name>
   	<url-pattern>/emp/detail.html</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>editEmp</servlet-name>
+  	<servlet-class>com.bit.controller.EmpEditController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>editEmp</servlet-name>
+  	<url-pattern>/emp/edit.html</url-pattern>
+  </servlet-mapping>
 </web-app>
