--- a/web15/src/main/webapp/WEB-INF/web.xml
+++ b/web15/src/main/webapp/WEB-INF/web.xml
@@ -50,4 +50,13 @@
   	<servlet-name>editEmp</servlet-name>
   	<url-pattern>/emp/edit.html</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>delEmp</servlet-name>
+  	<servlet-class>com.bit.controller.EmpDelController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>delEmp</servlet-name>
+  	<url-pattern>/emp/delete.html</url-pattern>
+  </servlet-mapping>
 </web-app>
